# E2E-ML-TEMPLATE

./: LICENSE  Makefile  README.md  pyproject.toml
E2E-ML-TEMPLATE/: __init__.py  dataset.py  features.py  plots.py
E2E-ML-TEMPLATE/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-ti-data-understanding.ipynb  1.01-ti-Data-cleaning-&-feature-creation.ipynb  2.01-ti-visualizations-EDA.ipynb  3.01-ti-modelling.ipynb  4.01-ti-publication.ipynb
notebooks/script/: 0.01-ti-data-understanding.py  0.01-ti-intro.py  4.01-ti-publication.py
project_name/: dataset.py  features.py  plots.py
project_name/modeling/: predict.py  train.py
